=========
Changelog
=========

Version 4.1.3

- Can now link to quests in the chat window by Shift + Clicking on the quest in the AtlasQuest window. Not all instances supported yet. Just Deadmines & Wailing Caverns.
- Changed text color for "Options" menu to match rest of Atlas/AtlasQuest. (Suggested by Telchar)
- Made "Story" button larger so German text isn't bigger than the button. (Suggested by Telchar)
- Moved "AtlasQuest" button in the AtlasFrame to same level as Atlas' "Options" button. (Suggested by Telchar)
- AtlasQuest side panel will no longer disappear when Atlas changes to an unsupported map, such as Entrances, Flight paths, etc. (Suggested by Telchar)
- Fixed BRD Horde quests "Heart of the Mountain" and "A Taste of Flame". (Reported by Vytae)
- German localization updates by Telchar.

- Quests added:
	- Old Hillsbrad: Nice Hat...




Version 4.1.2

- Compatibility with Atlas 1.12.
- Simplified Chinese localization updates by yeachan.
- German localization updates by Telchar.
- The usual fixes for typos and some clarification in quest information.

- Quests added:
	- Dire Maul East: The Prison's Bindings (Warlock)
	- Slave Pens: Ahune, the Frost Lord
	- Slave Pens: Ahune is Here!
	- Slave Pens: Summon Ahune
	- Slave Pens: Shards of Ahune




Version 4.1.1

- Fixed Quest complete checkboxes not working for Skettis and Magisters' Terrace.
- Updated AlphaMap Outdoor Raid support.
- German localization updated by Telchar.
- Simplified Chinese localization updated by yeachan.
- Re-added EquipCompare support. If Comparison Tooltips are enabled and EquipCompare is installed & enabled, AtlasQuest will use EquipCompare. Otherwise it'll use the built in Tooltips.
- Now using new GetItemIcon function from 2.4 patch to get item icons.

- Quests added:
	- Alterac Valley: The Sovereign Imperative (A)   (Thanks maqjav)
	- Alterac Valley: In Defense of Frostwolf (H)   (Thanks maqjav)
	- Alterac Valley: Proving Grounds   (Thanks maqjav)