@@ -4,7 +4,7 @@ Changelog
 
 Version 4.1.3
 
-- Can now link to quests in the chat window by Shift + Clicking on the quest in the AtlasQuest window. Not all instances supported yet. Just Deadmines & Wailing Caverns.
+- Can now generate quest links by Shift + Clicking on the quest in the AtlasQuest window. Not all instances supported yet.
 - Changed text color for "Options" menu to match rest of Atlas/AtlasQuest. (Suggested by Telchar)
 - Made "Story" button larger so German text isn't bigger than the button. (Suggested by Telchar)
 - Moved "AtlasQuest" button in the AtlasFrame to same level as Atlas' "Options" button. (Suggested by Telchar)
@@ -14,6 +14,7 @@ Version 4.1.3
 
 - Quests added:
 	- Old Hillsbrad: Nice Hat...
+	- Naxxramas: Omarion's Handbook
 
 
 
